chore:Finish Translation

--- a/Challenge04LGBB/View/Base.lproj/OnBoard.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/OnBoard.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -22,11 +22,11 @@
             <objects>
                 <viewController storyboardIdentifier="Page1" id="Y6W-OH-hqX" customClass="Page1" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm7-fv-9vI">
-                                <rect key="frame" x="20" y="655" width="77" height="52"/>
+                                <rect key="frame" x="20" y="671" width="77" height="52"/>
                                 <color key="backgroundColor" name="Child_Orange"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="cht-VR-ZNw"/>
@@ -44,7 +44,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Encontre sua receita" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-L3-5bz">
-                                <rect key="frame" x="20" y="97" width="350" height="50"/>
+                                <rect key="frame" x="20" y="109" width="353" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="fWB-ON-p4q"/>
                                 </constraints>
@@ -53,16 +53,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ob.1" translatesAutoresizingMaskIntoConstraints="NO" id="SjF-oY-RED">
-                                <rect key="frame" x="20" y="182" width="350" height="350"/>
+                                <rect key="frame" x="20" y="193.99999999999997" width="353" height="353.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Você encontra a receita mais apropriada para fazer pela duração, nível e faixa etária infantil!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vHU-it-w2l">
-                                <rect key="frame" x="20" y="552" width="350" height="55"/>
+                                <rect key="frame" x="20" y="567.33333333333337" width="353" height="55.666666666666629"/>
                                 <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="32"/>
                                 <color key="textColor" name="Mealmories_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJa-y1-qj5">
-                                <rect key="frame" x="315" y="655" width="55" height="52"/>
+                                <rect key="frame" x="318" y="671" width="55" height="52"/>
                                 <color key="backgroundColor" name="Child_Orange"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="dqs-zO-L9g"/>
@@ -78,7 +78,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confete.amarelo" translatesAutoresizingMaskIntoConstraints="NO" id="yYB-43-gw3">
-                                <rect key="frame" x="-36" y="622" width="300" height="280"/>
+                                <rect key="frame" x="-36" y="630" width="300" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="RnM-bs-hFh"/>
                                     <constraint firstAttribute="height" constant="280" id="tXo-q7-cUn"/>
@@ -124,11 +124,11 @@
             <objects>
                 <viewController storyboardIdentifier="Page2" id="OnF-vC-spW" customClass="Page2" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sH2-vT-xc4">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cozinhe e se divirta" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R58-Ko-UWX">
-                                <rect key="frame" x="20" y="97" width="350" height="50"/>
+                                <rect key="frame" x="20" y="109" width="353" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="2ox-fO-W89"/>
                                 </constraints>
@@ -137,16 +137,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ob.2" translatesAutoresizingMaskIntoConstraints="NO" id="vuA-ep-puT">
-                                <rect key="frame" x="20" y="182" width="350" height="350"/>
+                                <rect key="frame" x="20" y="193.99999999999997" width="353" height="353.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estimule cooperação na cozinha por meio de turnos e instruções." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="cKc-AG-6bd">
-                                <rect key="frame" x="20" y="552" width="350" height="54.666666666666629"/>
+                                <rect key="frame" x="20" y="567.33333333333337" width="353" height="55.333333333333371"/>
                                 <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="32"/>
                                 <color key="textColor" name="Mealmories_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XkB-W7-dVI">
-                                <rect key="frame" x="20" y="654.66666666666663" width="77" height="52"/>
+                                <rect key="frame" x="20" y="670.66666666666663" width="77" height="52"/>
                                 <color key="backgroundColor" name="Mix_Magenta"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="5CK-L2-C9d"/>
@@ -164,7 +164,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zI-VN-YCF">
-                                <rect key="frame" x="315" y="654.66666666666663" width="55" height="52"/>
+                                <rect key="frame" x="318" y="670.66666666666663" width="55" height="52"/>
                                 <color key="backgroundColor" name="Mix_Magenta"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="knA-La-Vbu"/>
@@ -180,7 +180,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confete" translatesAutoresizingMaskIntoConstraints="NO" id="o2v-fa-wc1">
-                                <rect key="frame" x="-33" y="622" width="300" height="280"/>
+                                <rect key="frame" x="-33" y="630" width="300" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="280" id="o0Z-2u-aXY"/>
                                     <constraint firstAttribute="width" constant="300" id="zcH-DM-F9o"/>
@@ -226,11 +226,11 @@
             <objects>
                 <viewController storyboardIdentifier="Page3" id="5XF-6g-9oU" customClass="Page3" customModule="Mealmories" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zn7-aU-dyH">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registre Mealmories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dn-Lc-v1A">
-                                <rect key="frame" x="20" y="97" width="350" height="50"/>
+                                <rect key="frame" x="20" y="109" width="353" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="wVR-fZ-64d"/>
                                 </constraints>
@@ -239,16 +239,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ob.3" translatesAutoresizingMaskIntoConstraints="NO" id="Bw6-uM-8CJ">
-                                <rect key="frame" x="20" y="182" width="350" height="350"/>
+                                <rect key="frame" x="20" y="193.99999999999997" width="353" height="353.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capture momentos mais inesperados ou divertidos sem sair do App!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="WlC-63-IfU">
-                                <rect key="frame" x="20" y="552" width="350" height="54.666666666666629"/>
+                                <rect key="frame" x="20" y="567.33333333333337" width="353" height="55.333333333333371"/>
                                 <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="32"/>
                                 <color key="textColor" name="Mealmories_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tg7-T8-k4e">
-                                <rect key="frame" x="20" y="654.66666666666663" width="350" height="52"/>
+                                <rect key="frame" x="20" y="670.66666666666663" width="353" height="52"/>
                                 <color key="backgroundColor" name="Adulto_Blue"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="NC5-4J-v54"/>
@@ -268,7 +268,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confete.azul" translatesAutoresizingMaskIntoConstraints="NO" id="GmY-E0-VFc">
-                                <rect key="frame" x="-34" y="622" width="300" height="280"/>
+                                <rect key="frame" x="-34" y="630" width="300" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="280" id="CHt-UJ-bfg"/>
                                     <constraint firstAttribute="width" constant="300" id="eX8-nZ-9ih"/>
