--- a/Challenge04LGBB/View/Base.lproj/Main.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/Main.storyboard
@@ -33,10 +33,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-Tr-ppv" userLabel="TurnosView">
-                                <rect key="frame" x="20" y="112" width="374" height="70"/>
+                                <rect key="frame" x="20" y="112" width="460" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TURNOS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woD-OK-cUV">
-                                        <rect key="frame" x="134.5" y="12" width="105" height="25"/>
+                                        <rect key="frame" x="177.5" y="12" width="105" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="105" id="mhN-Kp-lsq"/>
                                             <constraint firstAttribute="height" constant="25" id="wlO-Rc-mpb"/>
@@ -46,7 +46,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MYZ-DJ-dAd" customClass="ProgressBar" customModule="Mealmories" customModuleProvider="target">
-                                        <rect key="frame" x="112" y="45" width="150" height="10"/>
+                                        <rect key="frame" x="155" y="45" width="150" height="10"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="150" id="AHA-UU-WwM"/>
@@ -89,16 +89,16 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgN-Lf-PWV" userLabel="InstrucoesView">
-                                <rect key="frame" x="20" y="202" width="374" height="551"/>
+                                <rect key="frame" x="20" y="202" width="460" height="551"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adulto" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="f6u-Eg-cEd">
-                                        <rect key="frame" x="15" y="15" width="84.5" height="45"/>
+                                        <rect key="frame" x="15" y="15" width="104" height="45"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Em uma vasilha, junte os secos: polvinho doce e o parmesão" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="czN-bv-CPP">
-                                        <rect key="frame" x="27" y="409" width="320" height="44"/>
+                                        <rect key="frame" x="27" y="409" width="393.5" height="44"/>
                                         <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -113,7 +113,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siga a seguinte instrução:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="6V8-Vs-nYI">
-                                        <rect key="frame" x="15" y="70" width="262" height="27.5"/>
+                                        <rect key="frame" x="15" y="70" width="322" height="27.5"/>
                                         <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -127,7 +127,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qhd-gs-qhb">
-                                        <rect key="frame" x="27" y="477" width="320" height="50"/>
+                                        <rect key="frame" x="33" y="477" width="394" height="50"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="gray" title="É hora de comer!">
                                             <fontDescription key="titleFontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="17"/>
@@ -139,7 +139,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="secos.1" translatesAutoresizingMaskIntoConstraints="NO" id="sWO-ff-cJH">
-                                        <rect key="frame" x="93.5" y="179" width="187" height="193"/>
+                                        <rect key="frame" x="115" y="179" width="230" height="193"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eNc-zg-T6I">
                                         <rect key="frame" x="21" y="121" width="65" height="243"/>
@@ -170,17 +170,27 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="turno.adulto" translatesAutoresizingMaskIntoConstraints="NO" id="JIf-TP-zdD">
-                                        <rect key="frame" x="283" y="11" width="64" height="53"/>
+                                        <rect key="frame" x="369" y="11" width="64" height="53"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="64" id="kCg-m3-38H"/>
                                         </constraints>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cs-nD-XrO">
+                                        <rect key="frame" x="142" y="29" width="68" height="35"/>
+                                        <color key="tintColor" red="1" green="0.2156862745" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Timer"/>
+                                        <connections>
+                                            <action selector="timerButton:" destination="0BQ-UW-R7E" eventType="touchUpInside" id="QCh-lj-1ek"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" name="LabelBlue"/>
                                 <constraints>
                                     <constraint firstItem="JIf-TP-zdD" firstAttribute="top" secondItem="YgN-Lf-PWV" secondAttribute="top" constant="11" id="03w-Z8-J0Y"/>
                                     <constraint firstItem="qhd-gs-qhb" firstAttribute="centerX" secondItem="YgN-Lf-PWV" secondAttribute="centerX" id="40A-6b-W4B"/>
                                     <constraint firstItem="JIf-TP-zdD" firstAttribute="centerY" secondItem="f6u-Eg-cEd" secondAttribute="centerY" id="BNo-SC-Hwl"/>
+                                    <constraint firstItem="1cs-nD-XrO" firstAttribute="leading" secondItem="f6u-Eg-cEd" secondAttribute="trailing" constant="15" id="CTv-bl-tfT"/>
                                     <constraint firstItem="6V8-Vs-nYI" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.0499093" id="DCN-zo-hHS"/>
                                     <constraint firstItem="0aP-jH-D7M" firstAttribute="top" secondItem="czN-bv-CPP" secondAttribute="bottom" constant="20" id="Etx-es-RDR"/>
                                     <constraint firstItem="sWO-ff-cJH" firstAttribute="height" secondItem="YgN-Lf-PWV" secondAttribute="height" multiplier="0.35" id="IYX-la-HeE"/>
@@ -198,6 +208,7 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="499" id="fI0-Ob-lXp"/>
                                     <constraint firstItem="6V8-Vs-nYI" firstAttribute="top" secondItem="f6u-Eg-cEd" secondAttribute="bottom" constant="10" id="g1M-gU-bKe"/>
                                     <constraint firstItem="f6u-Eg-cEd" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.225936" id="g24-Ci-MTK"/>
+                                    <constraint firstItem="1cs-nD-XrO" firstAttribute="top" secondItem="YgN-Lf-PWV" secondAttribute="top" constant="15" id="gId-Wx-SgE"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="hAj-TK-GoX"/>
                                     <constraint firstItem="0aP-jH-D7M" firstAttribute="leading" secondItem="bHA-oc-nL9" secondAttribute="trailing" constant="20" id="hTH-Lz-7bg"/>
                                     <constraint firstItem="qhd-gs-qhb" firstAttribute="width" secondItem="YgN-Lf-PWV" secondAttribute="width" multiplier="0.855615" id="hUn-lW-Uzl"/>
@@ -217,7 +228,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wY7-zh-pSu">
-                                <rect key="frame" x="327" y="773" width="67" height="69"/>
+                                <rect key="frame" x="413" y="773" width="67" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="67" id="gnK-tb-Gjs"/>
                                     <constraint firstAttribute="height" constant="69" id="n40-5n-aRH"/>
@@ -237,7 +248,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk8-2Y-0fh">
-                                <rect key="frame" x="172.5" y="773" width="69" height="69"/>
+                                <rect key="frame" x="215.5" y="773" width="69" height="69"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="69" id="LhA-Oa-l2g"/>
                                     <constraint firstAttribute="height" constant="69" id="inW-f5-Myh"/>
