--- a/Challenge04LGBB/View/TimerScreen.storyboard
+++ b/Challenge04LGBB/View/TimerScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -17,7 +17,7 @@
         <!--Timer Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="TimerController" customModule="Mealmories" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TimerStoryboard" id="Y6W-OH-hqX" customClass="TimerController" customModule="Mealmories" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -62,7 +62,6 @@
                     </view>
                     <connections>
                         <outlet property="resetButton" destination="Roj-Dk-GJ0" id="rhk-Fa-lrk"/>
-                        <outlet property="resetTimer" destination="Roj-Dk-GJ0" id="1Wn-38-p8W"/>
                         <outlet property="startStopButton" destination="0c1-R6-pip" id="hUu-gd-XI3"/>
                         <outlet property="timeLabel" destination="f80-Og-RBk" id="tQv-8I-UpP"/>
                     </connections>
